--- a/index.html
+++ b/index.html
@@ -8,26 +8,38 @@
   <title>Document</title>
  </head>
  <body>
+<div class="head" >
   <nav>
    <div class="logo">
     <h2>FrAKtal</h2>
    </div>
    <div class="links">
     <ul>
-     <li>
-      About
-     </li>
-     <li>
-      Community
-     </li>
-     <li>
-      Products
-     </li>
-     <li>
-      Developers
-     </li>
+     <li>About<ul>
+      <li>Fraktal Network</li>
+      <li>Frak</li>
+      <li>Blog</li>
+     </ul></li>
+     <li>Comunity <ul>
+      <li>one</li>
+      <li>one</li>
+      <li>one</li>
+     </ul></li>
+     <li>Products <ul>
+        <li>one</li>
+        <li>one</li>
+        <li>one</li>
+       </ul></li>
+       <li>Developers <ul>
+        <li>one</li>
+        <li>one</li>
+        <li>one</li>
+       </ul></li>
+    
     </ul>
-   </div>
+     </div>
+    </ul>
+   
   </nav>
   <hero>
    <div class="title">
@@ -42,6 +54,7 @@
     <img src="earth.svg" alt="" />
    </div>
   </hero>
+</div>
  </body>
 
  <script
