--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
 		/>
 		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="style/animate.css" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -57,9 +58,38 @@
 					</ul>
 				</div>
 			</div>
+			<div class="mobile-panel">
+				<ul>
+					<li>
+						<a href="#">About</a>
+						<ul>
+							<li><a href="#">Network</a></li>
+							<li><a href="#">Frak</a></li>
+							<li><a href="#">Blog</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#">Comunity</a>
+						<ul>
+							<li><a href="#">Staking</a></li>
+							<li><a href="#">Partners</a></li>
+							<li><a href="#">Chat</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Products</a></li>
+					<li>
+						<a href="#">Developers</a>
+						<ul>
+							<li><a href="#">Documentation</a></li>
+							<li><a href="#">Library</a></li>
+							<li><a href="#">GitHub</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
 
-		<hero>
+		<hero class="wow animate__fadeInUp">
 			<div class="title-hero">
 				<h1>
 					DeFi is <br />
@@ -74,12 +104,15 @@
 				</div>
 			</div>
 			<div class="graphic">
-				<img src="assets/hero.png" alt="" />
+				<img class="gif" src="./assets/animated/web1.gif" alt="" />
+		
+					<img class="static" src="./assets/animated/phone1.png" alt="" />
+			
 			</div>
 		</hero>
 		<!--WHAT IS DEFI?-->
 		<intro>
-			<div class="first">
+			<div class="first wow animate__fadeInUp">
 				<div class="graphic">
 					<img src="assets/what-02.png" alt="" />
 				</div>
@@ -93,7 +126,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="second">
+			<div class="second wow animate__fadeInUp">
 				<div class="first">
 					<div class="text">
 						<h1>What is Fraktal?</h1>
@@ -112,7 +145,7 @@
 		</intro>
 
 		<benefits>
-			<div class="title">
+			<div class="title wow animate__fadeInUp">
 				<h1>Fraktal Leads DeFi</h1>
 				<p>
 					Fraktal boasts a vibrant developer community, passionate supporters,
@@ -121,7 +154,7 @@
 					use.
 				</p>
 			</div>
-			<div class="cards">
+			<div class="cards wow animate__fadeInUp">
 				<div class="card">
 					<div class="icon">
 						<img src="assets/benefits_ico/low.png" alt="" />
@@ -189,7 +222,7 @@
 		</benefits>
 
 		<partners>
-			<div class="title">
+			<div class="title wow animate__fadeInUp">
 				<h1>Who We Work With</h1>
 				<p>
 					Fraktal Directly integrates with all other Cosmos Ecosystem projects
@@ -198,7 +231,7 @@
 					world.
 				</p>
 			</div>
-			<div class="cards">
+			<div class="cards wow animate__fadeInUp">
 				<div class="card">
 					<div class="icon">
 						<img src="assets/partners/enigma.png" alt="" />
@@ -239,10 +272,10 @@
 		</partners>
 
 		<process>
-			<div class="title">
+			<div class="title wow animate__fadeInUp">
 				<h1>Get Started</h1>
 			</div>
-			<div class="cards">
+			<div class="cards wow animate__fadeInUp">
 				<div class="card">
 					<div class="icon">
 						<img src="assets/coin.png" alt="" />
@@ -288,7 +321,7 @@
 			</div>
 			<div class="contact-form">
 				<form action="">
-					<input type="text" />
+					<input type="text" placeholder="enter your email" />
 					<button>Subscribe</button>
 				</form>
 			</div>
@@ -350,36 +383,6 @@
 		<div class="copyright">
 			<small>&copy; Copyright 2020, Fraktal</small>
 		</div>
-
-		<div class="mobile-panel">
-			<ul>
-				<li>
-					<a href="#">About</a>
-					<ul>
-						<li><a href="#">Network</a></li>
-						<li><a href="#">Frak</a></li>
-						<li><a href="#">Blog</a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#">Comunity</a>
-					<ul>
-						<li><a href="#">Staking</a></li>
-						<li><a href="#">Partners</a></li>
-						<li><a href="#">Chat</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Products</a></li>
-				<li>
-					<a href="#">Developers</a>
-					<ul>
-						<li><a href="#">Documentation</a></li>
-						<li><a href="#">Library</a></li>
-						<li><a href="#">GitHub</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
 	</body>
 
 	<script
@@ -387,8 +390,9 @@
 		integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
 		crossorigin="anonymous"
 	></script>
-	<script src="typed.js"></script>
+	<script src="./js/typed.js"></script>
+	<script src="./js/wow.js"></script>
 	<script src=" https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js
  "></script>
-	<script src="js.js"></script>
+	<script src="./js/js.js"></script>
 </html>
