--- a/index.html
+++ b/index.html
@@ -105,19 +105,19 @@
 			</div>
 			<div class="graphic">
 				<img class="gif" src="./assets/animated/web1.gif" alt="" />
-		
-					<img class="static" src="./assets/animated/phone1.png" alt="" />
-			
+
+				<img class="static" src="./assets/animated/phone1.png" alt="" />
 			</div>
 		</hero>
 		<!--WHAT IS DEFI?-->
 		<intro>
-			<div class="first wow animate__fadeInUp">
-				<div class="graphic">
-					<img src="assets/what-02.png" alt="" />
+			<div class="defi wow animate__fadeInUp">
+				<div class="animaImgBottom">
+					<img class="phoneSet2" src="assets/animated/phoneSet2.png" alt="" />
+					<img class="phone2" src="assets/animated/phone2.png" alt="" />
 				</div>
 				<div class="text">
-					<h1>What is DeFi</h1>
+					<h1>What is DeFi?</h1>
 					<p>
 						DeFi (Decentralised Financial) apps give users full control over
 						their assets, enabling investors to vastly increase their profits by
@@ -126,20 +126,20 @@
 					</p>
 				</div>
 			</div>
-			<div class="second wow animate__fadeInUp">
-				<div class="first">
-					<div class="text">
-						<h1>What is Fraktal?</h1>
-						<p>
-							Fraktal is a highly scalable and low cost blockchain network
-							designed to make DeFi reach its fullest potential and expand to a
-							vast amount of new use cases which have not yet been possible due
-							to high transaction costs on other blockchain networks.
-						</p>
-					</div>
-					<div class="graphic">
-						<img src="assets/fraktal.png" alt="" />
-					</div>
+			<div class="fraktal wow animate__fadeInUp">
+				<div class="text">
+					<h1>What is Fraktal?</h1>
+					<p>
+						Fraktal is a highly scalable and low cost blockchain network
+						designed to make DeFi reach its fullest potential and expand to a
+						vast amount of new use cases which have not yet been possible due to
+						high transaction costs on other blockchain networks.
+					</p>
+				</div>
+				<div class="animaImgTop">
+					<img src="assets/animated/cubeSet.png" alt="" />
+					<img class="cubeShadow" src="assets/animated/cubeShadow.png" alt="" />
+					<img class="cube" src="assets/animated/cube.png" alt="" />
 				</div>
 			</div>
 		</intro>
